changes related to home page redirection and added link to add new service on home page

--- a/app/views/Application/search.html
+++ b/app/views/Application/search.html
@@ -74,6 +74,16 @@
 
 </div>
 
+<div id="addPageDiv" style="position:absolute;left:50%;bottom:10%">
+<form action="/add" method="GET" >
+
+<input type="submit" value="Add New Service" />
+
+</form>
+
+</div>
+
+
 </body>
 
 
